--- a/Bezier/CMakeLists.txt
+++ b/Bezier/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_library(Bezier BezierCurve.cpp BezierSurface.cpp)
+add_library(Bezier STATIC BezierCurve.cpp BezierSurface.cpp)
+
+target_include_directories(Bezier PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Bezier)
