--- a/Camera/CMakeLists.txt
+++ b/Camera/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_library(Camera Camera.cpp)
+add_library(Camera STATIC Camera.cpp)
+
+target_include_directories(Camera PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Camera)
