--- a/Importer/CMakeLists.txt
+++ b/Importer/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_library(Importer Importer.cpp)
+add_library(Importer STATIC Importer.cpp)
+
+target_include_directories(Importer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Importer)
