--- a/Inputs/CMakeLists.txt
+++ b/Inputs/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_library(Inputs Input.cpp)
+add_library(Inputs STATIC Input.cpp)
+
+target_include_directories(Inputs PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Inputs)
