--- a/Light/CMakeLists.txt
+++ b/Light/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_library(Lights PointLight.cpp)
+add_library(Lights STATIC PointLight.cpp)
+
+target_include_directories(Lights PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Light)
