--- a/Mesh/CMakeLists.txt
+++ b/Mesh/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_library(Mesh Mesh.cpp MeshEdge.cpp MeshHalfEdge.cpp MeshTriangle.cpp MeshVertex.cpp)
+add_library(Mesh STATIC Mesh.cpp MeshEdge.cpp MeshHalfEdge.cpp MeshTriangle.cpp MeshVertex.cpp)
+
+target_include_directories(Mesh PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Mesh)
