--- a/Scene/Axis/CMakeLists.txt
+++ b/Scene/Axis/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_library(Axis Axis.cpp)
+add_library(Axis STATIC Axis.cpp)
+
+target_include_directories(Axis PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Axis)
