--- a/Shaders/CMakeLists.txt
+++ b/Shaders/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_library(Shader Shader.cpp)
+add_library(Shader STATIC Shader.cpp)
+
+target_include_directories(Shader PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Shader)
