--- a/Scene/CMakeLists.txt
+++ b/Scene/CMakeLists.txt
@@ -1,7 +1,9 @@
-add_library(Scene Scene.cpp BezierManager.cpp LightManager.cpp MeshManager.cpp)
+add_library(Scene STATIC Scene.cpp BezierManager.cpp LightManager.cpp MeshManager.cpp)
+
+target_include_directories(Scene PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Scene)
 
 add_subdirectory(Axis)
 link_libraries(Scene PUBLIC Axis)
 include_directories(Scene PUBLIC
                     "${PROJECT_BINARY_DIR}"
-                    "${PROJECT_SOURCE_DIR}/Axis")
+                    "${PROJECT_SOURCE_DIR}/Scene/Axis")
